[package]
name = "backoff-issue-22"
version = "0.1.0"
authors = ["tibor <ihrwein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
backoff = { git = "https://github.com/ihrwein/backoff", branch="master",  features = ["tokio"]}
reqwest = "0.11.0"
anyhow = "1.0.38"

